--- a/.github/workflows/egg.yml
+++ b/.github/workflows/egg.yml
@@ -19,5 +19,10 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Install Chromium
+        run: sudo apt-get update && sudo apt-get install -y chromium-browser
+
       - name: Run crawler
         run: node index.js
+        env:
+          PUPPETEER_EXECUTABLE_PATH: /usr/bin/chromium-browser
