--- a/.github/workflows/egg.yml
+++ b/.github/workflows/egg.yml
@@ -30,4 +30,4 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-         name: screenshot
+         name: crawler-result
