--- a/.github/workflows/egg.yml
+++ b/.github/workflows/egg.yml
@@ -27,7 +27,5 @@ jobs:
         env:
           PUPPETEER_EXECUTABLE_PATH: /usr/bin/chromium-browser
 
-      - name: Download artifact
+      - name: Download All Artifacts
         uses: actions/download-artifact@v4
-        with:
-         name: crawler-result
