--- a/.github/workflows/egg.yml
+++ b/.github/workflows/egg.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches: [master]
 
+
+permissions:
+  contents: read
+  actions: write
+
 jobs:
   crawl:
     runs-on: ubuntu-latest
