--- a/.github/workflows/egg.yml
+++ b/.github/workflows/egg.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: "16"
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Install Chromium
         run: sudo apt-get update && sudo apt-get install -y chromium-browser
@@ -38,3 +38,5 @@ jobs:
          git add .
          git commit -m "Update"
          git push -u origin master
+
+
