--- a/.github/workflows/egg.yml
+++ b/.github/workflows/egg.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: "16"
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Install Chromium
         run: sudo apt-get update && sudo apt-get install -y chromium-browser
@@ -31,12 +31,5 @@ jobs:
         env:
           PUPPETEER_EXECUTABLE_PATH: /usr/bin/chromium-browser
 
-      - name: Commit and push changes
-        run: |
-         git config --global user.name "fo"
-         git config --global user.email "FossatiGiribaldi@gmail.com"
-         git add .
-         git commit -m "Update"
-         git push -u origin master
-
-
+      - name: Download Artifact
+        uses: actions/download-artifact@v4
