--- a/.github/workflows/egg.yml
+++ b/.github/workflows/egg.yml
@@ -33,3 +33,9 @@ jobs:
 
       - name: Download Artifact
         uses: actions/download-artifact@v4
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: result
+          path: result.txt 
