--- a/.github/workflows/egg.yml
+++ b/.github/workflows/egg.yml
@@ -35,16 +35,14 @@ jobs:
         env:
           PUPPETEER_EXECUTABLE_PATH: /usr/bin/chromium-browser
 
-      - name: Download Artifact
-        uses: actions/download-artifact@v4
+      # - name: Download Artifact
+      #   uses: actions/download-artifact@v4
 
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: result
-          path: result.txt 
-
-          
+      # - name: Upload Artifact
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: result
+      #     path: result.json 
 
       - name: Commit changes
         run: |
